re patterns optimization

--- a/src/1-qui-suis-je.html
+++ b/src/1-qui-suis-je.html
@@ -151,13 +151,10 @@ Très souvent, nous répondons à la question de l'identité sur la base de:
 </UL>
 
 <P>
-Autremenent dit, <B>je dois faire quelque chose pour être quelqu'un</B>.
+Autrement dit, <B>je dois faire quelque chose pour être quelqu'un</B>.
 </P>
 <P>
-La réponse que Paul donne à cette question n'est pas trouvée en nous, mais en Jésus-Christ. Je suis «en Christ». Ce terme revient un grand nombre de fois dans l'épître (cf. prochaine étude), et indique que <B>mon identité n'est pas fondée sur ce que je fais, mais sur ce que Jésus a fait pour moi</B>.
-</P>
-<P>
-Autrement dit: ce que Jésus a fait pour moi → qui je suis en lui → ce que je fais aujourd'hui
+La réponse que Paul donne à cette question n'est pas trouvée en nous, mais en Jésus-Christ. Je suis «en Christ». Ce terme revient un grand nombre de fois dans l'épître (cf. prochaine étude), et indique que <B>mon identité n'est pas fondée sur ce que je fais, mais sur ce que Jésus a fait pour moi</B>. 
 </P>
 <P>
 Souvent, on a une réponse <B>théorique</B> à la question de l'identité («je suis enfant de Dieu en Christ»), mais une réponse <B>fonctionelle</B> différente. C'est à dire que mes actions seront basée sur une autre identité que celle que je confesse. Cette identité fonctionnelle se révèle souvent dans les crises (qu'est-ce que je me dis pour me rassurer), lorsque je suis triste (vers quoi je me tourne pour me consoler), quand je suis jaloux ou menacé (probablement quelqu'un plus ancré dans l'identité que je convoite), etc.
